--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupMaster/_List.cshtml
@@ -24,8 +24,13 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?accSetupMasterId=@item.AccSetupMasterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
-                                @* <a href="../@controllerName/Delete?FinancialYearIds=@item.AccSetupMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
+                                <a href="@Url.Action("Edit", controllerName,
+                                           new { accSetupMasterId = item.AccSetupMasterId })"
+                                   title="Update"
+                                   class="btn btn-sm btn-soft-success btn-circle me-2">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                        @* <a href="../@controllerName/Delete?FinancialYearIds=@item.AccSetupMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
                     }
