--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccGLTransaction/CreateEdit.cshtml
@@ -117,9 +117,11 @@
                             </div>
                             <button type="button" class="btn btn-success" onclick="AccGLTransaction.SaveData()">@AdminResources.LabelSave</button>
 
-                            <a href="../@controllerName/Cancel?SelectedParameter1=@Model.AccSetupBalanceSheetId" class="btn btn-secondary">
+                            <a href="@Url.Action("Cancel", controllerName, new { SelectedParameter1 = Model.AccSetupBalanceSheetId })"
+                               class="btn btn-secondary">
                                 <i class="ft-x"></i>@AdminResources.LabelCancel
                             </a>
+
                         }
                     </div>
                 </div>
