--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/CreateEdit.cshtml
@@ -74,8 +74,12 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.CentreCode&SelectedParameter1=@Model.AccSetupBalanceSheetTypeId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
-                        }
+                            <a href="@Url.Action("Cancel", controllerName,
+                                       new { SelectedCentreCode = Model.CentreCode, SelectedParameter1 = Model.AccSetupBalanceSheetTypeId })"
+                               class="btn btn-secondary">
+                                <i class="ft-x"></i>@AdminResources.LabelCancel
+                           </a>
+                                                }
                     </div>
                 </div>
             </div>
