--- a/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Accounts/AccSetupBalanceSheet/_List.cshtml
@@ -24,7 +24,11 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?balanceSheetId=@item.AccSetupBalanceSheetId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                <a href="@Url.Action("Edit", controllerName, new { balanceSheetId = item.AccSetupBalanceSheetId })"
+                                   title="Update"
+                                   class="btn btn-sm btn-soft-success btn-circle me-2">
+                                    <i class="fas fa-edit"></i>
+                                </a>
                                 @* <a href="../@controllerName/Delete?FinancialYearIds=@item.AccSetupMasterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
