--- a/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapters/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Gazette/GazetteChapters/_List.cshtml
@@ -22,8 +22,8 @@
                             <td>@item.ChapterName</td>
                             <td>@item.DistrictName</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?gazetteChaptersId=@item.GazetteChapterId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?gazetteChaptersIds=@item.GazetteChapterId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="@Url.Action("Edit", controllerName, new { gazetteChaptersId = @item.GazetteChapterId })" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="@Url.Action("Delete", controllerName, new { gazetteChaptersIds = @item.GazetteChapterId })" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
