--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/CoditechApplicationSetting/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/CoditechApplicationSetting/_List.cshtml
@@ -23,7 +23,11 @@
                             <td style="max-width: 200px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@item.ApplicationValue2</td>
                             <td style="max-width: 200px; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@item.ApplicationValue3</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?coditechApplicationSettingId=@item.CoditechApplicationSettingId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a>
+                                <a href="@Url.Action("Edit", controllerName, new { coditechApplicationSettingId = item.CoditechApplicationSettingId })"
+                                   title="Update"
+                                   class="btn btn-sm btn-soft-success btn-circle me-2">
+                                    <i class="fas fa-edit"></i>
+                                </a>
                                 @* <span class="m-2">|</span> *@
                                 @* <a href="../@controllerName/Delete?coditechApplicationSettingIds=@item.CoditechApplicationSettingId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
