--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/CreateEdit.cshtml
@@ -97,7 +97,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/GetHospitalDoctorVisitingChargesByDoctorIdList?SelectedParameter1=@Model.HospitalDoctorId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="@Url.Action("GetHospitalDoctorVisitingChargesByDoctorIdList", controllerName, new { SelectedParameter1 = @Model.HospitalDoctorId })" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
