--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorOPDSchedule/_CreateEdit.cshtml
@@ -92,5 +92,5 @@
         </div>
     </div>
     <button type="submit" class="btn btn-success" onclick="HospitalDoctorOPDSchedule.ValidateHospitalDoctorOPDScheduleTime(); return false;">@AdminResources.LabelSave</button>
-    <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode&SelectedDepartmentId=@Model.SelectedDepartmentId" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+    <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode = @Model.SelectedCentreCode, SelectedDepartmentId = @Model.SelectedDepartmentId})" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
 }
