--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_HospitalDoctorVisitingChargesByDoctorIdList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalDoctorVisitingCharges/_HospitalDoctorVisitingChargesByDoctorIdList.cshtml
@@ -29,7 +29,7 @@
                             <td>@item.AppointmentType</td>
                             <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.Charges)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId&hospitalDoctorId=@Model.SelectedParameter1" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="@Url.Action("Edit", controllerName, new { HospitalDoctorVisitingChargesId = @item.HospitalDoctorVisitingChargesId, hospitalDoctorId = @Model.SelectedParameter1 })" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <!-- Delete Button Triggering Modal -->
                                 <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.HospitalDoctorVisitingChargesId"><i class="fas fa-trash-alt"></i></a>
                                 <!-- Delete Confirmation Modal -->
@@ -47,7 +47,7 @@
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                                 <!-- Delete action with selectedCentreCode parameter -->
-                                                <a href="../@controllerName/Delete?HospitalDoctorVisitingChargesId=@item.HospitalDoctorVisitingChargesId&hospitalDoctorId=@Model.SelectedParameter1" class="btn btn-outline-danger">Delete</a>
+                                                <a href="@Url.Action("Delete", controllerName, new { HospitalDoctorVisitingChargesId = @item.HospitalDoctorVisitingChargesId, hospitalDoctorId = @Model.SelectedParameter1 })" class="btn btn-outline-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
