--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTest/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTest/CreateEdit.cshtml
@@ -32,21 +32,21 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PathologyTestName, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.PathologyTestName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PathologyTestName, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PathologyTestName)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PathologyTestGroupName, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.PathologyTestGroupName, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", pathologyTestGroup)
                                         @Html.ValidationMessageFor(x => x.HospitalPathologyTestGroupId)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.TestSampleTypeEnumId, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.TestSampleTypeEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.TestSampleTypeEnumId.ToString(),
@@ -58,7 +58,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="@Url.Action("List", controllerName)" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
