--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTest/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTest/_List.cshtml
@@ -22,8 +22,8 @@
                             <td>@item.PathologyTestGroupName</td>
                             <td>@item.TestSampleType</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?hospitalPathologyTestId=@item.HospitalPathologyTestId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?hospitalPathologyTestIds=@item.HospitalPathologyTestId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="@Url.Action("Edit", controllerName, new { hospitalPathologyTestId = @item.HospitalPathologyTestId })" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="@Url.Action("Delete", controllerName, new { hospitalPathologyTestIds = @item.HospitalPathologyTestId })" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
