--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestGroup/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestGroup/_List.cshtml
@@ -23,8 +23,8 @@
                                 @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.IsActive)
                             </td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?hospitalPathologyTestGroupId=@item.HospitalPathologyTestGroupId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?hospitalPathologyTestGroupIds=@item.HospitalPathologyTestGroupId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="@Url.Action("Edit", controllerName, new { hospitalPathologyTestGroupId=@item.HospitalPathologyTestGroupId })" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="@Url.Action("Delete", controllerName, new { hospitalPathologyTestGroupIds=@item.HospitalPathologyTestGroupId })" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
