--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestPrices/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPathologyTestPrices/_List.cshtml
@@ -22,8 +22,8 @@
                             <td>@item.HospitalPathologyPriceCategory</td>
                             <td>@item.Price</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?hospitalPathologyTestPricesId=@item.HospitalPathologyTestPricesId" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?hospitalPathologyTestPricesIds=@item.HospitalPathologyTestPricesId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
+                                <a href="@Url.Action("Edit", controllerName, new { hospitalPathologyTestPricesId=@item.HospitalPathologyTestPricesId })" title="Update" class="btn btn-sm btn-soft-success btn-circle me-2"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="@Url.Action("Delete", controllerName, new { hospitalPathologyTestPricesIds=@item.HospitalPathologyTestPricesId })" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
