--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientAppointment/CreateEdit.cshtml
@@ -32,14 +32,14 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.SelectedCentreCode, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", centreDropdown)
                                         @Html.ValidationMessageFor(x => x.SelectedCentreCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.MedicalSpecializationEnumId, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.MedicalSpecializationEnumId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.MedicalSpecializationEnumId.ToString(),
@@ -74,7 +74,7 @@
                                 }
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.HospitalPatientRegistrationId, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.HospitalPatientRegistrationId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.CentrewiseHospitalPatientsList.ToString(),
@@ -88,7 +88,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.AppointmentDate, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.AppointmentDate, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.AppointmentDate, AdminGeneralHelper.DateFormatForTextBox(), new { @class = "form-control", @readonly = "true" })
                                         @Html.ValidationMessageFor(x => x.AppointmentDate)
 
@@ -102,7 +102,7 @@
                                 {
                                     <div class="col-lg-4">
                                         <div class="mb-3">
-                                            @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label required"})
+                                            @Html.LabelFor(x => x.AppointmentTypeEnumId, new { @class = "form-label required" })
                                             @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownSelectedValue = Model.AppointmentTypeEnumId.ToString(),
@@ -116,7 +116,7 @@
                                 }
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.RequestedTimeSlot, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.RequestedTimeSlot, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.TimeSlotByDoctorsListAndAppointmentDate.ToString(),
@@ -129,7 +129,7 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.HospitalPatientAppointmentPurposeId, new { @class = "form-label required"})
+                                        @Html.LabelFor(x => x.HospitalPatientAppointmentPurposeId, new { @class = "form-label required" })
                                         @Html.Partial("~/Views/Shared/Control/_DropdownList.cshtml", new DropdownViewModel()
                                {
                                    DropdownType = DropdownTypeEnum.HospitalPatientAppointmentPurpose.ToString(),
@@ -141,7 +141,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.SelectedCentreCode" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode=@Model.SelectedCentreCode })" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
