--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientRegistration/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientRegistration/_List.cshtml
@@ -34,9 +34,9 @@
                             <td>@item.FirstName</td>
                             <td>@item.LastName</td>
                             <td>@item.Gender</td>
-                            <td>@item.MobileNumber</td>                           
+                            <td>@item.MobileNumber</td>
                             <td class="text-center">
-                                <a href="../@controllerName/UpdatePatientPersonalDetails?hospitalPatientRegistrationId=@item.HospitalPatientRegistrationId&personId=@item.PersonId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
+                                <a href="@Url.Action("UpdatePatientPersonalDetails", controllerName, new { hospitalPatientRegistrationId=@item.HospitalPatientRegistrationId, personId=@item.PersonId })" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a>@* <span class="m-2">|</span> *@
                                 @* <a href="../@controllerName/Delete?hospitalPatientRegistrationIds=@item.HospitalPatientRegistrationId" title="Delete" class="btn btn-sm btn-soft-danger btn-circle"><i class="fas fa-trash-alt"></i></a> *@
                             </td>
                         </tr>
