--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientType/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalPatientType/CreateEdit.cshtml
@@ -2,12 +2,12 @@
 @{
     ViewBag.Title = Model.HospitalPatientTypeId > 0 ? "Update Hospital PatientType" : "Add Hospital PatientType";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    string actionName = ViewContext.RouteData.Values["action"].ToString();    
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <!-- Page Content-->
 <div class="page-content mt-5">
     <div class="container-fluid">
-        <div class="row">        
+        <div class="row">
             <div class="col-lg-12">
                 <div class="card">
                     <div class="card-header">
@@ -28,14 +28,14 @@
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
                             @Html.HiddenFor(m => m.HospitalPatientTypeId)
-                            <div class="row">                               
+                            <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.PatientType, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PatientType, new { @class = "form-control" })
                                         @Html.ValidationMessageFor(x => x.PatientType)
                                     </div>
-                                </div>                              
+                                </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.IsActive, new { @class = "form-label" })
@@ -46,7 +46,7 @@
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="@Url.Action("List", controllerName)" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
