--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/CreateEdit.cshtml
@@ -40,7 +40,7 @@
                                         @Html.ValidationMessageFor(x => x.CentreCode)
                                         @if (Model.HospitalRegistrationFeeId > 0)
                                         {
-                                            @Html.HiddenFor(x=>x.CentreCode)
+                                            @Html.HiddenFor(x => x.CentreCode)
                                         }
                                     </div>
                                 </div>
@@ -88,7 +88,7 @@
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             @* <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a> *@
-                            <a href="../@controllerName/Cancel?SelectedCentreCode=@Model.CentreCode" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
+                            <a href="@Url.Action("Cancel", controllerName, new { SelectedCentreCode=@Model.CentreCode})" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
