--- a/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/HMS/HospitalRegistrationFee/_List.cshtml
@@ -28,7 +28,7 @@
                             </td>
                             <td>@AdminGeneralHelper.FormatPriceWithCurrency(@item.Charges)</td>
                             <td class="text-center">
-                                <a href="../@controllerName/Edit?hospitalRegistrationFeeId=@item.HospitalRegistrationFeeId" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="@Url.Action("Edit", controllerName, new { hospitalRegistrationFeeId=@item.HospitalRegistrationFeeId })" title="Update" class="btn btn-sm btn-soft-success btn-circle"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
                                 <!-- Delete Button Triggering Modal -->
                                 <a href="#" title="Delete" class="btn btn-sm btn-soft-danger btn-circle" data-bs-toggle="modal" data-bs-target="#confirmDeleteModal_@item.HospitalRegistrationFeeId"><i class="fas fa-trash-alt"></i></a>
                                 <!-- Delete Confirmation Modal -->
@@ -46,7 +46,7 @@
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                                                 <!-- Delete action with selectedCentreCode parameter -->
-                                                <a href="/@controllerName/Delete?hospitalRegistrationFeeIds=@item.HospitalRegistrationFeeId&selectedCentreCode=@Model.SelectedCentreCode" class="btn btn-outline-danger">Delete</a>
+                                                <a href="@Url.Action("Delete", controllerName, new { hospitalRegistrationFeeIds=@item.HospitalRegistrationFeeId, selectedCentreCode=@Model.SelectedCentreCode })" class="btn btn-outline-danger">Delete</a>
                                             </div>
                                         </div>
                                     </div>
